*** empty log message ***

--- a/samples/sockets/htdocs/config.html
+++ b/samples/sockets/htdocs/config.html
@@ -1,4 +1,4 @@
-<http>
+<html>
 <body>
 <h3>Configuration</h3>
 
@@ -14,4 +14,4 @@ scheduler-class = "cSocketRTScheduler"
 <a href="index.html>Back</a>
 
 </body>
-</http>
+</html>
