--- a/samples/sockets/htdocs/httpmodel.html
+++ b/samples/sockets/htdocs/httpmodel.html
@@ -1,4 +1,4 @@
-<http>
+<html>
 <body>
 <h3>The HTTP model</h3>
 
@@ -24,4 +24,4 @@ To try:
 <a href="index.html>Back</a>
 
 </body>
-</http>
+</html>
