--- a/samples/sockets/htdocs/telnetmodel.html
+++ b/samples/sockets/htdocs/telnetmodel.html
@@ -1,4 +1,4 @@
-<http>
+<html>
 <body>
 <h3>The Telnet model</h3>
 
@@ -28,4 +28,4 @@ To try:
 <a href="index.html>Back</a>
 
 </body>
-</http>
+</html>
