--- a/samples/sockets/htdocs/index.html
+++ b/samples/sockets/htdocs/index.html
@@ -1,4 +1,4 @@
-<http>
+<html>
 <body>
 <h3>Sockets (Hardware-in-the Loop Simulation Demo)</h3>
 
@@ -12,7 +12,7 @@ implement a device in a real system).
 This example contains two simulation models:
 
 <ul>
-  <li>The <a href="httpmodel.html">HTTP</a> model (the one you're currently 
+  <li>The <a href="httpmodel.html">HTTP</a> model (the one you're currently
       running)
   <li>The <a href="telnetmodel.html">Telnet</a> model
 </ul>
@@ -24,33 +24,8 @@ animation speed to near maximum (using the slider at the top of the graphics
 window) for the simulation to be able to keep up with real time (you can check
 on the performance gauge bar: the simsec/sec gauge should stay around 1.0).
 
-<h3>How it works</h3>
-
 <p>
-Hardware-in-the-loop simulation has two ingredients:
-
- - the simulation has to be synchronized to real time;
-
- - there has to be a way the simulation can communicate with the real world:
-   it has to be able to receive external events, and possibly also to send
-   events out of the simulation. The implementation of this external
-   communication can be very different from one simulation scenario to another:
-   it can be as simple as TCP sockets (as here) or pipes, it can be raw
-   communication on an Ethernet NIC or an USB port, or communication with a
-   interface card via interrupts and DMA transfer. If you plan to do
-   hardware-in-the-loop simulation, you'll most like have to implement your
-   own external communication interface.
-
-<p>
-The word "real-time" means that the simulation is executed in a way such that
-simulation time is synchronized to real time: simulating one second
-in the model will also take one "real" second. This is in contrast to
-"normal" simulation, when we want the simulation to run as fast as possible.
-Of course, the CPU has to be fast enough so that the simulation can keep up
-with real time.
-
-<p>
-The external interface used in this example simulation is a single TCP socket.
+Read about <a href="how.html">how it works</a>.
 
 <p>
 The models was then configured <a href="config.html">like this</a>.
@@ -65,4 +40,4 @@ ExtHTTPClient....
 
 
 </body>
-</http>
+</html>
