--- a/samples/sockets/htdocs/how.html
+++ b/samples/sockets/htdocs/how.html
@@ -29,7 +29,9 @@ with real time.
 
 <p>
 The external interface used in this example simulation is a single TCP socket.
+All the above is encoded in the <tt>cSocketRTScheduler</tt> class.
 
+<p>
 <a href="index.html>Back</a>
 
 </body>
