*** empty log message ***

--- a/samples/sockets/htdocs/httpmodel.html
+++ b/samples/sockets/htdocs/httpmodel.html
@@ -8,7 +8,7 @@ web server, which replies with the appropriate web pages or 404 Not Found.
 (The simulation is performed on a very abstract level: TCP or IP details
 are not simulated at all, etc.) Most HTTP clients are simulated ones,
 but one of them is a proxy which represents a real-life user (that is,
-you): by pointing your browser to http://localhost:4242 while the
+you): by pointing your browser to <tt>http://localhost:4242</tt> while the
 simulation is running, you can inject real HTTP requests into the
 simulated network.
 
@@ -17,7 +17,7 @@ To try:
 
 <ul>
   <li> start the simulation with the "Run" button on the toolbar
-  <li> fire up your browser, and point it to: http://localhost:4242
+  <li> fire up your browser, and point it to: <tt>http://localhost:4242</tt>
   <li> then watch how your HTTP requests get into the simulated network
 </ul>
 
