--- a/samples/sockets/htdocs/index.html
+++ b/samples/sockets/htdocs/index.html
@@ -28,7 +28,7 @@ on the performance gauge bar: the simsec/sec gauge should stay around 1.0).
 Read about <a href="how.html">how it works</a>.
 
 <p>
-The models was then configured <a href="config.html">like this</a>.
+The model was then configured <a href="config.html">like this</a>.
 
 <p>
 Interesting functionality is in the cSocketRTScheduler class. Its source code
