*** empty log message ***

--- a/samples/sockets/htdocs/config.html
+++ b/samples/sockets/htdocs/config.html
@@ -1,4 +1,9 @@
 <html>
+<style type="text/css">
+h1,h2,h3,p,pre,table,ul {font-family: Geneva, Arial, Helvetica, sans-serif;}
+pre { margin-left:8pt; background:#fffff4; padding:5pt; border:1px solid; border-color:#a0a0a0 }
+</style>
+
 <body>
 <h3>Configuration</h3>
 
