*** empty log message ***

--- a/samples/sockets/htdocs/index.html
+++ b/samples/sockets/htdocs/index.html
@@ -10,8 +10,12 @@ pre { margin-left:8pt; background:#fffff4; padding:5pt; border:1px solid; border
 <p>
 This is an example how one can implement hardware-in-the-loop simulation
 with OMNeT++/OMNEST. Hardware-in-the-loop means that some external device
-is taking part in the simulation. (In other scenarios, the simulation may
-implement a device in a real system).
+is taking part in the simulation, or in other scenarios, the simulation
+emulates a device in which is part of the real system. In this example
+simulation, it will be an external process (a <i>web browser</i> or
+a <i>telnet client</i>) that takes part in the simulation.
+
+
 
 <p>
 This example contains two simulation models:
