--- a/samples/sockets/htdocs/how.html
+++ b/samples/sockets/htdocs/how.html
@@ -34,7 +34,10 @@ with real time.
 
 <p>
 The external interface used in this example simulation is a single TCP socket.
-All the above is encoded in the <tt>cSocketRTScheduler</tt> class.
+Interesting functionality is in the <tt>cSocketRTScheduler</tt> class.
+Its source code is in socketrtscheduler.h/cc.
+<tt>cSocketRTScheduler</tt> combines synchronizing to real-time with
+socket communication.
 
 <p>
 <a href="index.html>Back</a>
