--- a/samples/sockets/htdocs/index.html
+++ b/samples/sockets/htdocs/index.html
@@ -12,10 +12,8 @@ This is an example how one can implement hardware-in-the-loop simulation
 with OMNeT++/OMNEST. Hardware-in-the-loop means that some external device
 is taking part in the simulation, or in other scenarios, the simulation
 emulates a device in which is part of the real system. In this example
-simulation, it will be an external process (a <i>web browser</i> or
-a <i>telnet client</i>) that takes part in the simulation.
-
-
+simulation, it will be an external process (a web browser or
+a telnet client) that participates in the simulation.
 
 <p>
 This example contains two simulation models:
@@ -28,25 +26,35 @@ This example contains two simulation models:
 
 <p>
 Both simulations are executed in real-time, that is, simulation time is
-synchronized to real (wall clock) time. It is recommended that you set
-animation speed to near maximum (using the slider at the top of the graphics
-window) for the simulation to be able to keep up with real time (you can check
-on the performance gauge bar: the simsec/sec gauge should stay around 1.0).
+synchronized to real (wall clock) time. Then you can connect into the
+simulation with the web browser or the telnet program, and generate
+traffic on the simulated network.
+
+<p>
+It is recommended that you set animation speed to near maximum (using the
+slider at the top of the graphics window) for the simulation to be able
+to keep up with real time. Then you can check on the performance gauge bar:
+the simsec/sec gauge should stay around 1.0.
+
+<p>
+This example simulation is just a toy, but it's not difficult to see
+how one could change it into something useful. For example, if one
+changes the TCP socket interface to grabbing and sending raw Ethernet
+frames, a simulation can be made to receive and generate traffic
+on the local network. It is essential though that the computer running
+the simulation has enough processing power to keep up with real time,
+and communication latencies at the external interface be small enough
+and properly accounted for in the model.
+
+<p>
+At the heart of this simulation is the <tt>cSocketRTScheduler</tt> class,
+which OMNeT++/OMNEST was <a href="config.html">configured</a> to use
+as scheduler. The "external client" simple modules (<tt>ExtHTTPClient</tt>,
+<tt>ExtTelnetClient</tt>) then rely on <tt>cSocketRTScheduler</tt>
+for keeping in touch with the external process (browser or telnet).
 
 <p>
 Read about <a href="how.html">how it works</a>.
-
-<p>
-The model was then configured <a href="config.html">like this</a>.
-
-<p>
-Interesting functionality is in the cSocketRTScheduler class. Its source code
-is in socketrtscheduler.h/cc. It combines synchronizing to real-time with
-socket communication.
-
-<p>
-ExtHTTPClient....
-
 
 </body>
 </html>
