--- a/samples/sockets/htdocs/telnetmodel.html
+++ b/samples/sockets/htdocs/telnetmodel.html
@@ -1,6 +1,6 @@
 <html>
 <style type="text/css">
-h1,h2,h3,p,pre,table,ul {font-family: Geneva, Arial, Helvetica, sans-serif;}
+h1,h2,h3,p,table,ul {font-family: Geneva, Arial, Helvetica, sans-serif;}
 pre { margin-left:8pt; background:#fffff4; padding:5pt; border:1px solid; border-color:#a0a0a0 }
 </style>
 
