*** empty log message ***

--- a/samples/sockets/htdocs/config.html
+++ b/samples/sockets/htdocs/config.html
@@ -8,7 +8,7 @@ pre { margin-left:8pt; background:#fffff4; padding:5pt; border:1px solid; border
 <h3>Configuration</h3>
 
 <p>
-To run the simulation in Hardware-In-the-Loop mode, we entered the
+To run the simulation in hardware-in-the-loop mode, we entered the
 following lines into <tt>omnetpp.ini</tt>:
 
 <pre>
