--- a/samples/sockets/htdocs/telnetmodel.html
+++ b/samples/sockets/htdocs/telnetmodel.html
@@ -31,6 +31,10 @@ To try:
 </ul>
 
 <p>
+It is also possible to stop the simulation when a packet is underway, and
+peek into it.
+
+<p>
 <a href="index.html>Back</a>
 
 </body>
