--- a/samples/sockets/htdocs/realtime.html
+++ b/samples/sockets/htdocs/realtime.html
@@ -12,8 +12,18 @@ The word "real-time" means that the simulation is executed in a way such that
 simulation time is synchronized to real time: simulating one second
 in the model will also take one "real" second. This is in contrast to
 "normal" simulation, when we want the simulation to run as fast as possible.
-Of course, the CPU has to be fast enough so that the simulation can keep up
-with real time.
+
+<p>
+To implement real-time simulation, one has to establish a relationship between
+real time and simulation. For example, one has to remember the date/time
+when the simulation was started as <i>T<sub>0</sub></i>, and then arrange so that
+during simulation, an event with simulation time <i>t</i> gets executed
+at real time <i>T<sub>0</sub>+t</i>. Practically this means that
+just before executing every event, one needs to introduce some amount of waiting,
+using e.g. Unix <tt>usleep()</tt> calls. In OMNeT++/OMNEST, this waiting is embedded
+scheduler class. The Dyna/Real-Time example uses the <tt>cRealtimeScheduler</tt>
+class, and this one uses <tt>cSocketRealTimeScheduler</tt> which also takes care
+of other tasks necessary in hardware-in-the-loop simulation.
 
 <p>
 <a href="index.html>Back</a>
