*** empty log message ***

--- a/samples/sockets/htdocs/hwintheloop.html
+++ b/samples/sockets/htdocs/hwintheloop.html
@@ -5,7 +5,7 @@ pre { margin-left:8pt; background:#fffff4; padding:5pt; border:1px solid; border
 </style>
 
 <body>
-<h3>How it works</h3>
+<h3>Hardware-in-the-loop simulation</h3>
 
 <p>
 Hardware-in-the-loop simulation has two ingredients:
