--- a/samples/sockets/htdocs/index.html
+++ b/samples/sockets/htdocs/index.html
@@ -5,7 +5,7 @@ pre { margin-left:8pt; background:#fffff4; padding:5pt; border:1px solid; border
 </style>
 
 <body>
-<h3>Sockets (Hardware-in-the Loop Simulation Demo)</h3>
+<h3>The Sockets Demo</h3>
 
 <p>
 This is an example how one can implement hardware-in-the-loop simulation
