*** empty log message ***

--- a/samples/sockets/htdocs/hwintheloop.html
+++ b/samples/sockets/htdocs/hwintheloop.html
@@ -43,7 +43,7 @@ independent (e.g. they may be implemented as send and receive operations
 on the same socket), it is often practical to do both via the scheduler.
 
 <p>
-<a href="index.html>Back</a>
+<a href="index.html>Home</a>
 
 </body>
 </html>
