--- a/samples/sockets/htdocs/implementation.html
+++ b/samples/sockets/htdocs/implementation.html
@@ -63,6 +63,8 @@ to a byte array (e.g. gets the HTTP reply from the <tt>HTTPMsg</tt>
 object), and invokes a <tt>cSocketRTScheduler</tt> method to send it
 on the socket.
 
+<h4>Implementation</h4>
+
 <p>
 As you can see, the scheduler object has to work together closely with
 the interface module. At the beginning, the interface module
@@ -76,14 +78,21 @@ following code, found in the <tt>initialize()</tt> functions of
 <tt>ExtHTTPClient</tt> and <tt>ExtTelnetClient</tt>:
 
 <pre>
-rtScheduler = check_and_cast<cSocketRTScheduler *>(simulation.scheduler());
+rtScheduler = check_and_cast&lt;cSocketRTScheduler *&gt;(simulation.scheduler());
 cMessage *rtEvent = new cMessage("rtEvent");
-rtScheduler->setInterfaceModule(this, rtEvent, recvBuffer, 4000, &numRecvBytes);
+rtScheduler-&gt;setInterfaceModule(this, rtEvent, recvBuffer, 4000, &amp;numRecvBytes);
 </pre>
 
+<p>
+<i>Notice that this registration function and even the notion of a dedicated
+network interface module are specific to this particular
+example simulation. <tt>cSocketRTScheduler</tt> is just an example, and
+it was deliberately made as simple as possible to facilitate understanding.
+In real-life applications, you can (and will probably have to) create
+much more sophisticated hardware-in-the-loop scheduler classes.</i>
 
 <p>
-<a href="index.html>Back</a>
+<a href="index.html>Home</a>
 
 </body>
 </html>
