--- a/samples/sockets/htdocs/realtime.html
+++ b/samples/sockets/htdocs/realtime.html
@@ -26,7 +26,7 @@ class, and this one uses <tt>cSocketRealTimeScheduler</tt> which also takes care
 of other tasks necessary in hardware-in-the-loop simulation.
 
 <p>
-<a href="index.html>Back</a>
+<a href="index.html>Home</a>
 
 </body>
 </html>
