--- a/samples/sockets/htdocs/telnetmodel.html
+++ b/samples/sockets/htdocs/telnetmodel.html
@@ -35,7 +35,7 @@ It is also possible to stop the simulation when a packet is underway, and
 peek into it.
 
 <p>
-<a href="index.html>Back</a>
+<a href="index.html>Home</a>
 
 </body>
 </html>
