*** empty log message ***

--- a/samples/sockets/htdocs/implementation.html
+++ b/samples/sockets/htdocs/implementation.html
@@ -84,12 +84,12 @@ rtScheduler-&gt;setInterfaceModule(this, rtEvent, recvBuffer, 4000, &amp;numRecv
 </pre>
 
 <p>
-<i>Notice that this registration function and even the notion of a dedicated
+<b>Notice that this registration function and even the notion of a dedicated
 network interface module are specific to this particular
 example simulation. <tt>cSocketRTScheduler</tt> is just an example, and
 it was deliberately made as simple as possible to facilitate understanding.
 In real-life applications, you can (and will probably have to) create
-much more sophisticated hardware-in-the-loop scheduler classes.</i>
+much more sophisticated hardware-in-the-loop scheduler classes.</b>
 
 <p>
 <a href="index.html>Home</a>
