*** empty log message ***

--- a/samples/sockets/htdocs/hwintheloop.html
+++ b/samples/sockets/htdocs/hwintheloop.html
@@ -19,11 +19,11 @@ Hardware-in-the-loop simulation has two ingredients:
 </ol>
 
 <p>
-The implementation of the external communication in (2) can be very different
+The implementation of external communication in (2) can be very different
 from one simulation scenario to another. It can be as simple as TCP sockets
 (as here) or pipes, it can be raw communication on an Ethernet NIC or an USB port,
 or communication with a interface card via interrupts and DMA transfer.
-If you plan to do hardware-in-the-loop simulation, you'll most like have to
+If you plan to do hardware-in-the-loop simulation, you'll most likely have to
 implement your own external communication interface.
 
 <p>
