--- a/samples/sockets/htdocs/index.html
+++ b/samples/sockets/htdocs/index.html
@@ -11,7 +11,7 @@ pre { margin-left:8pt; background:#fffff4; padding:5pt; border:1px solid; border
 This is an example how one can implement hardware-in-the-loop simulation
 with OMNeT++/OMNEST. Hardware-in-the-loop means that some external device
 is taking part in the simulation, or in other scenarios, the simulation
-emulates a device in which is part of the real system. In this example
+program emulates a device which is part of the real system. In this example
 simulation, it will be an external process (a web browser or
 a telnet client) that participates in the simulation.
 
@@ -27,7 +27,7 @@ This example contains two simulation models:
 <p>
 Both simulations are executed in <a href="realtime.html">real-time</a>,
 that is, simulation time is synchronized to real (wall clock) time.
-Then you can connect into the simulation with the web browser or
+Also, you can connect into the simulation with the web browser or
 the telnet program, and generate traffic on the simulated network.
 Read more about the principle <a href="hwintheloop.html">here</a>.
 
