*** empty log message ***

--- a/samples/sockets/htdocs/implementation.html
+++ b/samples/sockets/htdocs/implementation.html
@@ -92,7 +92,7 @@ In real-life applications, you can (and will probably have to) create
 much more sophisticated hardware-in-the-loop scheduler classes.</b>
 
 <p>
-<a href="index.html>Home</a>
+<a href="index.html">Home</a>
 
 </body>
 </html>
